2011-06-28  Eric Seidel  <eric@webkit.org>

        Reviewed by Tony Chang.

        new-run-webkit-tests needs a --webkit-test-runner option
        https://bugs.webkit.org/show_bug.cgi?id=63439

        This was accidentally fixed in bug 63501 as well.
        The root problem here was that the webkit unit tests were not using
        enough mocks.  I've fixed them here to use more mocks
        which should unbreak windows.

        * Scripts/webkitpy/layout_tests/port/webkit_unittest.py:

2011-06-28  Eric Seidel  <eric@webkit.org>

        Reviewed by Tony Chang.

        new-run-webkit-tests should not run mthml tests when MHTML support is disabled
        https://bugs.webkit.org/show_bug.cgi?id=63549

        This way mhtml tests won't show up as "missing" results on all non-chromium platforms.
        I happen to go looking for what code was deciding that .mht was a supported
        extension, found test_files.py and then removed some redundant doc-strings and
        if branching.

        * Scripts/webkitpy/layout_tests/port/test_files.py:
        * Scripts/webkitpy/layout_tests/port/webkit.py:
        * Scripts/webkitpy/layout_tests/port/webkit_unittest.py:

2011-06-28  Roland Steiner  <rolandsteiner@chromium.org>

        Reviewed by Tony Chang.

        Fix filesystem_unittest.FileSystemTest test_read_and_write_file()
        https://bugs.webkit.org/show_bug.cgi?id=63514

        - change write_text_file to write_binary_file
        - check that text_path and binary_path are actually existant files
        - change cleanup block from 'except' to 'finally'

        * Scripts/webkitpy/common/system/filesystem_unittest.py:

2011-06-28  Adam Roben  <aroben@apple.com>

        Roll out r89924 and r89925

        I didn't mean to commit them!

        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/LayoutTestHistoryAnalyzer.js:
        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/Utilities.js: